[tool.poetry]
name = "example-package"
version = "0.1.1"
description = ""
authors = ["Unit111 <unit_1@abv.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytest = "^8.2.2"
twine = "^5.1.0"
poetry = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
